[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio ={ version = "1", features = ["full"] }
parking_lot = "0.12.1"
thiserror = "1.0.40"
log = "0.4.0"
env_logger = "0.10.0"
